[gd_scene load_steps=12 format=2]

[ext_resource path="res://CoolLine_Max11/script/pop_up_score.gd" type="Script" id=1]
[ext_resource path="res://CoolLine_Max11/style/button_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://CoolLine_Max11/style/button_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://CoolLine_Max11/font/ARCADECLASSIC.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://CoolLine_Max11/font/jackeyfont.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.243137, 0.239216, 0.231373, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.968627, 0.27451, 0.0745098, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 1
outline_color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
resource_name = "detail_anim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("score_detail:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "popup_anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.827451 ) ]
}

[node name="popup_control" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="popup_score" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -5.0
margin_top = -9.0
margin_right = 507.0
margin_bottom = 900.0
__meta__ = {
"_edit_lock_": true
}

[node name="ok_button" type="Button" parent="popup_score"]
visible = false
margin_left = 217.0
margin_top = 805.0
margin_right = 300.0
margin_bottom = 888.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
action_mode = 0
text = "OK"

[node name="play_button" type="Button" parent="popup_score"]
margin_left = 301.0
margin_top = 825.0
margin_right = 430.0
margin_bottom = 872.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
action_mode = 0
text = " Play"

[node name="exit_button" type="Button" parent="popup_score"]
margin_left = 87.0
margin_top = 825.0
margin_right = 216.0
margin_bottom = 872.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
action_mode = 0
text = "   Exit"

[node name="score_detail" type="Label" parent="popup_score"]
margin_left = 14.0505
margin_top = 46.0505
margin_right = 503.051
margin_bottom = 773.051
rect_clip_content = true
size_flags_vertical = 1
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "ROUND 01

Spinning Drive:
16

Green Square:
12

Complete Bonus:
0

SCORE:
12 x 10 = 120"
align = 1
autowrap = true
clip_text = true
percent_visible = 0.0

[node name="score_detail_anim" type="AnimationPlayer" parent="popup_score"]
anims/detail_anim = SubResource( 5 )
anims/popup_anim = SubResource( 6 )
